# tictactoe_wang_xiaoyi

./: CHANGELOG.md  CONTRIBUTING.md  HW07-1.ipynb  LICENSE  README.md  excuting.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_xw3028/: __init__.py
tests/: test_tictactoe_xw3028.py  tictactoe_xw3028.py
