[tool.poetry]
name = "tictactoe_xw3028"
version = "0.1.0"
description = "A simple Python package that provides tictactoe game functionalities."
authors = ["Xiaoyi Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
