[tool.poetry]
name = "tictactoe_xw3028"
version = "0.1.1"
description = "A simple Python package that provides tictactoe game functionalities."
authors = ["Xiaoyi Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=1.3,<3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"
sphinx-rtd-theme = "^3.0.1"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
